--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,18 +4,20 @@ spring:
 
 ---
 
-server:
-  address: 192.168.0.117
-  port: 8080
-  servlet:
-    context-path: /api
-  error:
-    include-message: always
+
 spring:
   application:
     name: report
+  server:
+    port: 8080
+    servlet:
+      context-path: /api
+    error:
+      include-message: always
 external-api:
   baseUrl: https://hygieia.fast-report.com/
   login: apikey
   token: toinotuk6cspof759edm7sxto81dhxur6s89pfm3e3bxh1ce8kuo
 
+cors:
+  origin: ${CORS_ORIGIN}
