--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,3 +18,6 @@ external-api:
   baseUrl: https://hygieia.fast-report.com/
   login: apikey
   token: toinotuk6cspof759edm7sxto81dhxur6s89pfm3e3bxh1ce8kuo
+
+cors:
+  origin: ${CORS_ORIGIN}
